k8s/class-code/lecture4-ingress/k8s/api-a/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-a
  namespace: jeff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-a
  template:
    metadata:
      labels:
        app: api-a
    spec:
      containers:
      - name: api-a
        image: api-a:v1
        ports:
        - containerPort: 4040
