k8s/class-code/lecture4-ingress/k8s/api-a/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: api-a-svc
spec:
  selector:
    app: api-a
  ports:
  - port: 4040
    targetPort: 4040
  type: ClusterIP
