k8s/class-code/lecture4-ingress/k8s/api-a/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-a-ingress
  namespace: jeff
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/ssl-redirect:  "true"
spec:
  tls:
    - hosts:
      - hodi.local
      secretName: tls-secrets
  rules:
    - host: hodi.local
      http:
        paths:
          - path: /api-a(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                  name: api-a-svc
                  port:
                    number: 4040
                    # localhost/api-a/health
